Try Set up Connect method with Database

--- a/pmm_be/src/main/resources/application.properties
+++ b/pmm_be/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=pmm_be
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pmm
+spring.datasource.username=postgres
+spring.datasource.password=---
+spring.datasource.hikari.maximum-pool-size=10
+
+# ?????????????????????? SSL (???? Supabase) ??????:
+# spring.datasource.url=jdbc:postgresql://HOST:5432/DB?sslmode=require
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8080
