--- a/pmm_be/src/main/resources/application.properties
+++ b/pmm_be/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pmm_be
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/pmm
-spring.datasource.username=postgre
+spring.datasource.username=postgres
 spring.datasource.password=---
 spring.datasource.hikari.maximum-pool-size=10
 
