--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -9,24 +9,29 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: pmm_be
     steps:
       - uses: actions/checkout@v4
 
-      # --- Build & Test ---
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
 
-      - name: Build and Test (Gradle)
+      - name: Make gradlew executable (Linux)
+        run: chmod +x ./gradlew
+
+      - name: Build & Test (Gradle)
         run: ./gradlew clean test
 
-      - name: Upload Test Report
+      - name: Upload Test Report (optional)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-report
-          path: build/reports/tests/test/
+          path: pmm_br/build/reports/tests/test/   # <<< ชี้ path ให้ตรง
 
   docker:
     runs-on: ubuntu-latest
@@ -40,15 +45,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Tag variables
+      - name: Compute tags
         id: vars
         run: |
           SHA=${GITHUB_SHA::7}
-          echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/pmm_be:latest,${{ secrets.DOCKERHUB_USERNAME }}/pmm_be:${SHA}" >> $GITHUB_OUTPUT
+          echo "latest=${{ secrets.DOCKERHUB_USERNAME }}/pmm_be:latest" >> $GITHUB_OUTPUT
+          echo "sha=${{ secrets.DOCKERHUB_USERNAME }}/pmm_be:${SHA}" >> $GITHUB_OUTPUT
 
-      - name: Build & Push Docker image
+      - name: Build & Push Docker
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./pmm_br    # <<< Dockerfile อยู่ใน pmm_br
           push: true
-          tags: ${{ steps.vars.outputs.tags }}
+          tags: |
+            ${{ steps.vars.outputs.latest }}
+            ${{ steps.vars.outputs.sha }}
