--- a/pmm_be/src/main/resources/application.properties
+++ b/pmm_be/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=pmm_be
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/pmm
 spring.datasource.username=postgres
-spring.datasource.password=---
+spring.datasource.password=05022548
 spring.datasource.hikari.maximum-pool-size=10
 
 # ?????????????????????? SSL (???? Supabase) ??????:
